compiler/testData/diagnostics/tests/duplicateJvmSignature/specialNames/classObject.kt
// FIR_IDENTICAL
class C {
    companion <!REDECLARATION!>object<!> {}

    konst <!REDECLARATION!>Companion<!> = C
}
